chore: image res and fix hero on mobile

--- a/src/components/CommunityCards/CommunityCards.module.scss
+++ b/src/components/CommunityCards/CommunityCards.module.scss
@@ -7,4 +7,8 @@
   &:hover {
     transform: scale(1.1);
   }
+
+  img {
+    width: 185px;
+  }
 }
